feat: add syntax highlighting to homepage (#140)
I couldn't preview it locally without adding a bunch of env variables,
but assuming Vercel generates a preview link of this PR, we can preview
it there.

Uses [`bright`](https://bright.codehike.org/) for RSC-compatible
syntax-highlighting.

---------

Co-authored-by: Sahil Lavingia <sahil.lavingia@gmail.com>

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ai": "^3.4.0",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
+    "bright": "^0.8.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
