--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "prepare": "cd packages/shortest && pnpm build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
-
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "pnpm lint:fix"
+    ]
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.50",
@@ -95,8 +99,10 @@
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "happy-dom": "^15.7.4",
+    "husky": "^9.1.7",
     "js-yaml": "^4.1.0",
     "jsdom": "^25.0.1",
+    "lint-staged": "^15.2.11",
     "smee-client": "^2.0.3",
     "tsx": "^4.7.1"
   }
