--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 20
           cache: "npm"
 
-      - run: npm ci
+      - run: npm install --no-package-lock
 
       - name: Lint
         run: npm run lint -- --fix
