--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -25,7 +25,7 @@ jobs:
       - run: pnpm install
 
       - name: Lint
-        run: pnpm run lint -- --fix
+        run: pnpm eslint . --fix
         shell: bash
 
       - name: Format
