add shortest as dev dependency

--- a/examples/package.json
+++ b/examples/package.json
@@ -9,7 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@antiwork/shortest": "^0.2.1"
   }
 }
