update publish workflow to release the packages based on version tag

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,10 +2,8 @@ name: Publish Package
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - 'packages/shortest/**'
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 jobs:
