--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,7 @@ ANTHROPIC_API_KEY=
 GITHUB_TOTP_SECRET=
 GITHUB_USERNAME=
 GITHUB_PASSWORD=
+
+# Mailosaur integration
+MAILOSAUR_API_KEY=
+MAILOSAUR_SERVER_ID=
