--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -8,14 +8,14 @@ jobs:
   shortest:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    
+
     env:
       ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
       CLERK_PUBLISHABLE_KEY: ${{ secrets.CLERK_PUBLISHABLE_KEY }}
       CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
-      MAILOSAUR_API_KEY: ${{ secrets.MAILOSAUR_API_KEY }}
+      _MAILOSAUR_API_KEY: ${{ secrets.MAILOSAUR_API_KEY }}
       MAILOSAUR_SERVER_ID: ${{ secrets.MAILOSAUR_SERVER_ID }}
-    
+
     steps:
       - uses: actions/checkout@v4
 
@@ -43,7 +43,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           max_timeout: 300
-          check_status: false
 
       - name: Run Shortest tests
         env:
