--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -11,7 +11,7 @@ jobs:
     timeout-minutes: 10
 
     env:
-      ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY_2 }}
+      ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
       CLERK_PUBLISHABLE_KEY: ${{ secrets.CLERK_PUBLISHABLE_KEY }}
       CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
       MAILOSAUR_API_KEY: ${{ secrets.MAILOSAUR_API_KEY }}
