add ability to run package in dev mode from project root

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "build:pkg": "cd packages/shortest && pnpm build",
+    "dev:pkg": "cd packages/shortest && pnpm dev",
     "setup": "npx tsx lib/setup.ts",
     "db:seed": "npx tsx lib/db/seed.ts",
     "db:generate": "drizzle-kit generate",
