Improve test execution errors, and console output (#266)
Resolves #261

* Fix Mailosaur errors
* Upload artifacts on CI when build fails
* Small README updates
* Improve CLI output:
  * Display test file path
  * Display test name before the start being executed
* Small indentations to improve readability (temporary until a more
robust solution will be implemented)
  * Fix summary alignment for _Tests_

--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -8,14 +8,14 @@ jobs:
   shortest:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    
+
     env:
       ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
       CLERK_PUBLISHABLE_KEY: ${{ secrets.CLERK_PUBLISHABLE_KEY }}
       CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
       MAILOSAUR_API_KEY: ${{ secrets.MAILOSAUR_API_KEY }}
       MAILOSAUR_SERVER_ID: ${{ secrets.MAILOSAUR_SERVER_ID }}
-    
+
     steps:
       - uses: actions/checkout@v4
 
@@ -43,9 +43,18 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           max_timeout: 300
-          check_status: false
 
       - name: Run Shortest tests
         env:
           SHORTEST_TEST_BASE_URL: ${{ steps.waitFor.outputs.url }}
         run: pnpm shortest --headless --target=${{ steps.waitFor.outputs.url }}
+
+      - name: Upload artifacts
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifacts
+          path: .shortest
+          if-no-files-found: error
+          include-hidden-files: true
+          retention-days: 7
