--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.50",
     "@ai-sdk/openai": "^0.0.61",
+    "@anthropic-ai/bedrock-sdk": "^0.12.0",
     "@clerk/nextjs": "^5.6.0",
     "@faker-js/faker": "^8.4.1",
     "@octokit/rest": "^21.0.2",
