--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "db:seed": "dotenv -e .env.local -- npx tsx lib/db/seed.ts",
-    "db:generate": "dotenv -e .env.local -- drizzle-kit generate",
-    "db:migrate": "dotenv -e .env.local -- npx tsx lib/db/migrate.ts",
-    "db:studio": "dotenv -e .env.local -- drizzle-kit studio",
-    "db:cleanup": "dotenv -e .env.local -- tsx lib/db/cleanup.ts",
+    "db:seed": "npx tsx lib/db/seed.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "npx tsx lib/db/migrate.ts",
+    "db:studio": "drizzle-kit studio",
+    "db:cleanup": "tsx lib/db/cleanup.ts",
     "stripe:webhooks": "stripe listen --forward-to http://localhost:3000/api/stripe/webhook",
-    "setup": "dotenv -e .env.local -- npx tsx lib/setup.ts",
-    "pkg:build": "dotenv -e .env.local -- cd packages/shortest && pnpm build",
-    "pkg:dev": "dotenv -e .env.local -- cd packages/shortest && pnpm dev",
-    "pkg:test": "dotenv -e .env.local -- cd packages/shortest && pnpm shortest",
-    "pkg:test:src": "dotenv -e .env.local -- npx tsx packages/shortest/src/cli/bin.ts",
-    "test": "dotenv -e .env.local -- pnpm shortest",
+    "setup": "npx tsx lib/setup.ts",
+    "pkg:build": "cd packages/shortest && pnpm build",
+    "pkg:dev": "cd packages/shortest && pnpm dev",
+    "pkg:test": "cd packages/shortest && pnpm shortest",
+    "pkg:test:src": "npx tsx packages/shortest/src/cli/bin.ts",
+    "test": "pnpm shortest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit --incremental"
