chore: Run tests against local build in CI (#273)
Remove Vercel preview dependency for CI tests.

--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "db:cleanup": "tsx lib/db/cleanup.ts",
     "stripe:webhooks": "stripe listen --forward-to http://localhost:3000/api/stripe/webhook",
     "setup": "npx tsx lib/setup.ts",
-
     "pkg:build": "cd packages/shortest && pnpm build",
     "pkg:dev": "cd packages/shortest && pnpm dev",
     "pkg:test": "cd packages/shortest && pnpm shortest",
     "pkg:test:src": "npx tsx packages/shortest/src/cli/bin.ts",
-
     "test": "pnpm shortest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -92,6 +90,7 @@
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
     "@vitejs/plugin-react": "^4.3.1",
+    "dotenv": "^8.0.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
