--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -10,21 +10,17 @@ jobs:
     timeout-minutes: 10
 
     env:
-      ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-      CLERK_PUBLISHABLE_KEY: ${{ secrets.CLERK_PUBLISHABLE_KEY }}
-      CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
-      MAILOSAUR_API_KEY: ${{ secrets.MAILOSAUR_API_KEY }}
-      MAILOSAUR_SERVER_ID: ${{ secrets.MAILOSAUR_SERVER_ID }}
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
     steps:
       - uses: actions/checkout@v4
 
-      # Setup pnpm first
       - uses: pnpm/action-setup@v2
         with:
           version: 8
 
-      # Then setup Node with pnpm caching
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -34,20 +30,29 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
+      - name: Pull and set up .env.local
+        run: |
+          pnpm dlx vercel pull --environment=preview --token=$VERCEL_TOKEN
+          cp .vercel/.env.preview.local .env.local
+          test -f .env.local || (echo ".env.local not created" && exit 1)
+
+      - name: Setup database
+        run: |
+          pnpm drizzle-kit generate
+          pnpm db:migrate
+          pnpm db:seed
+
       - name: Install Playwright
         run: pnpm exec playwright install chromium
 
-      - name: Wait for Vercel preview deployment
-        uses: patrickedqvist/wait-for-vercel-preview@v1.3.2
-        id: waitFor
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          max_timeout: 300
+      - name: Build app
+        run: pnpm build
+
+      - name: Start app in background
+        run: pnpm start -p 3000 & sleep 10
 
       - name: Run Shortest tests
-        env:
-          SHORTEST_TEST_BASE_URL: ${{ steps.waitFor.outputs.url }}
-        run: pnpm shortest --headless --target=${{ steps.waitFor.outputs.url }}
+        run: pnpm shortest --headless
 
       - name: Upload artifacts
         if: failure()
