Use type instead of label for issue templates

--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -1,6 +1,6 @@
 name: Feature request
 description: Request a feature to make Shortest better
-labels: ["enhancement"]
+type: feature
 body:
   - type: markdown
     attributes:
