--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,6 +1,6 @@
 name: Bug report
 description: Create a bug report to make Shortest better
-labels: ["bug"]
+type: bug
 body:
   - type: markdown
     attributes:
